testdata/invalid/syntax/missing_brace.pact
// Missing closing brace
component User {
	id: string
	name: string
// missing closing brace
